day11/helloworld-v1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodehelloworld.example1.com
  labels:
    app: helloworld-v1
spec:
  containers:
  - name: k8s-demo
    image: 105552010/k8s-demo:v1
    ports:
    - name: nodejs-port
      containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v1
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30303
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: helloworld-v1
