day11/ingress-v2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
spec:
  rules:
  - host: nodehelloworld.example1.com
    http:
      paths:
      - backend:
          serviceName: helloworld-v1
          servicePort: 80
  - host: nodehelloworld.example2.com
    http:
      paths:
      - backend:
          serviceName: helloworld-v2
          servicePort: 80
